  affect tables with empty non-resizing columns using angled headers, making
  them typically flicker back and forth between +0 and +1 pixels.
- Windows: io.ConfigWindowsMoveFromTitleBarOnly is latched during Begin(),
  effectively allowing to change the value on a per-window basis (although
  there is a better internal mechanism for it).
- Disabled: fixed a bug when a previously enabled item that got nav focus
  and then turns disabled could still be activated using keyboard. (#9036)
- InputText: when buffer is not resizable, trying to paste contents that
  cannot fit will now truncate text to nearest UTF-8 codepoint boundaries,
  instead of completely ignoring the paste. (#9029)
- InputText: avoid continuously overwriting ownership of ImGuiKey_Enter/_KeypadEnter
  keys in order to allow e.g. external Shortcut override behavior. (#9004)
- InputText: when using a callback to reduce/manipulate the value of BufTextLen,
  we do not require anymore that CursorPos be clamped by user code. (#9029)
- InputTextMultiline: fixed a crash when using ImGuiInputTextFlags_WordWrap and
  resizing the parent window while keeping the multi-line field active (which is
  most typically achieved when resizing programmatically or via a docking layout
  reacting to a platform window resize). (#3237, #9007) [@anton-kl, @ocornut]
- Textures:
  - Fixed an issue preventing multi-contexts from using each others' fonts
    if context 2 runs after context 1's Render() function. (#9039)
- MultiSelect: added ImGuiMultiSelectFlags_NoSelectOnRightClick to disable default
  right-click processing, which selects item on mouse down and is designed for
  context-menus. (#8200, #9015)
- Groups: fixed an issue reporting IsItemEdited() signal after EndGroup() when
  triggered by some widgets e.g. Checkbox(), Selectable() and many others, which
  cleared ActiveId at the same time as editing. (#9028)
  Note that IsItemDeactivatedAfterEdit() was not affected, only IsItemEdited).
- Drag and Drop: